fix vertical alignment of inner (collapsed) vals

--- a/views/jsonpanes.scss
+++ b/views/jsonpanes.scss
@@ -10,6 +10,7 @@
   white-space: nowrap;
   font-family: monospace;
   padding: 1em;
+  line-height: 1.4;
 
   * {
     // reset
@@ -62,7 +63,7 @@
 
   // only applies in collapsed state
   .val-inner {
-    display: inline-block;
+    display: inline;
     max-width: 28em;
     overflow: hidden;
     text-overflow: ellipsis;
